--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,14 @@
   box-sizing: border-box;
 }
 
+/* color Section */
 :root{
   --color-131921: #131921;
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
 }
+/* color Section */
 
 body{
   font-family: 'Rubik', sans-serif;
@@ -93,3 +95,32 @@ a{
   color: var(--color-febd69) !important;
 }
 /* Header Part end */
+
+
+/* footer Part */
+footer{
+  background-color: var(--color-232f3e);
+}
+
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.uil-newspaper{
+  font-size: xx-large;
+  color: white;
+  margin: 0;
+}
+
+footer .input-group-text{
+  background-color: #232f3e;
+  color: white;
+  padding: 8px 17px;
+}
+
+.social_icons i{
+  padding: 5px 10px 5px 10px;
+  background-color: #3b4149;
+  border-radius: 50px;
+}
+/* end of footer part */
