--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+  --color-bf4800: #bf4800;
 }
 /* color Section */
 
@@ -36,6 +37,21 @@ a{
 
 .gap-30{
   gap: 30px;
+}
+
+.button{
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 15px;
+  transition: 0.3s;
+}
+
+.button:hover{
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+  border-radius: 25px;
 }
 
 /* Header Part */
@@ -124,3 +140,73 @@ footer .input-group-text{
   border-radius: 50px;
 }
 /* end of footer part */
+
+/*Home Page */
+
+.main-banner-content{
+  top: 10%;
+  left: 5%;
+}
+
+.main-banner-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800) ;
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.main-banner-content h5{
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.main-banner-content p{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+/* small baners */
+
+.small-banner-content{
+  top: 10%;
+  left: 10%;
+}
+
+.small-banner-content h4{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800) ;
+  margin: 0 0 0px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.small-banner-content h5{
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.small-banner-content p{
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+.small-banner{
+  width: 49%;
+}
+
+/* End Of the Home Page */
