--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
   --color-bf4800: #bf4800;
+  --color-f5f5f7: #f5f5f7;
 }
 /* color Section */
 
@@ -208,5 +209,15 @@ footer .input-group-text{
 .small-banner{
   width: 49%;
 }
+
+
+/* Home wraper 2 */
+
+.home-wrapper-2{
+  background-color: var(--color-f5f5f7);
+}
+
+/* Home wraper 2 end */
+
 
 /* End Of the Home Page */
