--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@ a{
   border-radius: 25px;
 }
 
+h6{
+  font-weight: 600;
+}
+
 /* Header Part */
 
 .header-top-strip{
@@ -217,6 +221,9 @@ footer .input-group-text{
   background-color: var(--color-f5f5f7);
 }
 
+.servies i{
+  font-size: xx-large;
+}
 /* Home wraper 2 end */
 
 
