coment categori section

--- a/src/App.css
+++ b/src/App.css
@@ -226,5 +226,8 @@ footer .input-group-text{
 }
 /* Home wraper 2 end */
 
+/* categories section */
+
+/* categories section */
 
 /* End Of the Home Page */
