--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   --color-232f3e: #232f3e;
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
+  --color-ededed: #ededed;
 }
 /* color Section */
 
@@ -235,12 +236,37 @@ footer .input-group-text{
 }
 
 .categories > div{
-  width: 24%;
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+
+.categories > div > div{
+  width: 60%;
 }
 
 .categories > div > img{
   width: 80px;
 }
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4){
+  border-bottom: 1px solid var(--color-ededed);
+}
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3){
+  border-right: 1px solid var(--color-ededed);
+}
+
+.categories > div:nth-child(5),
+.categories > div:nth-child(6),
+.categories > div:nth-child(7){
+  border-right: 1px solid var(--color-ededed);
+}
+
 /* categories section */
 
 /* End Of the Home Page */
