--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,18 @@
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
+  --color-777777: #777777;
 }
 /* color Section */
 
 /* adding after Marquee */
+
+.section-heading{
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
 .card-wrapper {
   background-color: white;
   box-shadow: 0 0 10px #0000001a;
@@ -25,6 +33,7 @@
 
 body{
   font-family: 'Rubik', sans-serif;
+  background-color: var(--color-f5f5f7);
 }
 
 a{
@@ -53,14 +62,14 @@ a{
   color: white;
   font-size: 14px;
   padding: 13px 33px;
-  border-radius: 15px;
+  border-radius: 25px;
   transition: 0.3s;
 }
 
 .button:hover{
   background-color: var(--color-febd69);
   color: var(--color-131921);
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 h6{
@@ -285,4 +294,43 @@ footer .input-group-text{
 .marquee-inner-wrapper  div > img{
   width: 200px;
 }
+/* End of brands section */
+
+/* Blog Section */
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.blog-card img{
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.blog-content{
+  padding: 15px;
+}
+
+.blog-content .date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+}
+
+.blog-content .title{
+  font-size: 18px;
+  color: var(--color-131921);
+}
+
+.blog-content .desc{
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+/* End of Blog Section */
+
 /* End Of the Home Page */
